--- a/index.html
+++ b/index.html
@@ -10,10 +10,19 @@
 <body>
     <div class="container">
         <div class="title">
-            Cabeçalho
+            GAMES LOVERS ENQUETE
         </div>
-        <div>
-            Subtextos
+        <div class="content">
+            <p>
+                <span>Estamos escolhendo nessa enquete os melhores estilos de jogos entre os afixionados por video games.</span>
+                <span>Participe da nossa enquete e escolha entrte os três finalistas!</span>
+            </p>
+            <p>
+                A sua escolha é muito importante para nós
+            </p>
+            <p>
+                No final da enquete iremos sortear um <strong>brinde</strong> entre os participantes.
+            </p>
         </div>
 
         <div class="forms">
