--- a/index.html
+++ b/index.html
@@ -38,9 +38,27 @@
             <input type="email" placeholder="Digite seu email:"/>
             
             <div class="cards">
-                <div class="card">Card1</div>
-                <div class="card">Card2</div>
-                <div class="card">Card3</div>
+                <div class="card">
+                    <div class="card-title">
+                        Esportes
+                    </div>
+                    <object data="assets/sports_soccer_white.svg" type="image/svg+xml" ></object>
+                    <button>Votar</button>
+                </div>
+                <div class="card">
+                    <div class="card-title">
+                        Simulação
+                    </div>
+                    <object data="assets/local_airport_white.svg" type="image/svg+xml" ></object>
+                    <button>Votar</button>
+                </div>
+                <div class="card">
+                    <div class="card-title">
+                        Estratégia
+                    </div>
+                    <object data="assets/psychology_white.svg" type="image/svg+xml" ></object>
+                    <button>Votar</button>
+                </div>
             </div>
                 
         </div>
